# mapkit-react

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  isochones2  isochrones.js  package-lock.json  package.json  server.js  test
.git-old/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/: HEAD
.git-old/logs/refs/remotes/origin/: HEAD  (+1 more)
.git-old/objects/pack/: pack-30433ef525b2fa0b33597dd4fdbeb6dc57c6cd6a.idx  pack-30433ef525b2fa0b33597dd4fdbeb6dc57c6cd6a.pack
.git-old/refs/heads/: main
api/: Dockerfile  app.js
api/isochrones/: .dockerignore  package-lock.json  package.json  test.js
api/isochrones/native/: Cargo.toml
api/isochrones/native/src/: intersection.rs  js_helpers.rs  lib.rs  ors_helpers.rs  valhalla_helpers.rs
client/: .eslintcache  Dockerfile  package-lock.json  package.json
client/amplify/: team-provider-info.json
client/amplify/.config/: project-config.json
client/amplify/backend/: backend-config.json
client/models/: index.d.ts  index.js  schema.js
client/public/: index.html
client/src/: AccountMenu.js  App.js  Destination.css  Destination.js  GenerateIsochrones.js  Map.js  Saver.js  SearchBar.css  SearchBar.js  SearchCollection.js  SearchCollectionView.js  SignInDropDownMenu.js  index.js  utils.js
client/src/models/: index.d.ts  schema.js
isochrones/: README.md  package-lock.json  package.json  test  test.js
isochrones/lib/: index.js
isochrones/native/: Cargo.toml
isochrones/native/src/: js_helpers.rs  lib.rs  ors_helpers.rs  valhalla_helpers.rs
isochrones2/: test.js
isochrones2/native/src/: isochrones.rs  valhalla_helpers.rs
isochrones_test/: Cargo.toml
isochrones_test/src/: main.rs
react-express-docker-skeleton/: .gitignore  docker-compose.yml
react-express-docker-skeleton/api/: Dockerfile  Dockerfile-prod  app.js  package-lock.json  package.json
react-express-docker-skeleton/client/: nginx.conf  package.json
(+14 files in other folders)
