[package]
name = "isochrones_test"
version = "0.1.0"
authors = ["Noah Gamboa <ngamboa@apple.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"

