[package]
name = "isochrones"
version = "0.1.0"
authors = ["Noah Gamboa <noah@gamboafamily.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[lib]
name = "isochrones"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.13"
geo-booleanop = "=0.3.2"
geo-types = "=0.6.2"
geojson = { version = "=0.21.0", features = ["geo-types"] }
itertools = "0.10.0"
chrono = "0.4.19"
